# chess

./: README.md  pyproject.toml
src/: board.py  controller.py  gui.py  main.py  piece.py  player.py  player_minimax.py  player_random.py  utils.py
tests/: test_bishop.py  test_king.py  test_knight.py  test_pawn.py  test_queen.py  test_rook.py  test_undo.py
